--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="netscope, CNN, visualization, tool, neural network, convnet, graph, deep learning">
 	<meta name="autho" content="dgschwend">
     <title>Netscope CNN Analyzer</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/tooltip.css">
     <link rel="stylesheet" href="assets/css/codemirror.css">
     <link rel="stylesheet" href="assets/css/netscope.css">
