Add preset models

--- a/quickstart.html
+++ b/quickstart.html
@@ -65,7 +65,7 @@
             <div class="authors">Kaiming He, Xiangyu Zhang, Shaoqing Ren, Jian Sun</div>
 		</div>
         <div class="preset">
-            <a href="./#/preset/resnet-50">ResNet-152</a>
+            <a href="./#/preset/resnet-152">ResNet-152</a>
             <div class="authors">Kaiming He, Xiangyu Zhang, Shaoqing Ren, Jian Sun</div>
 		</div>
         <div class="preset">
@@ -95,6 +95,22 @@
         <div class="preset">
             <a href="./#/preset/vgg-16">VGG 16 Layers</a>
             <div class="authors">Karen Simonyan, Andrew Zisserman</div>
+        </div>
+        <div class="preset">
+            <a href="./#/preset/shufflenet">ShuffleNet x1</a>
+            <div class="authors">Xiangyu Zhang, Xinyu Zhou, Mengxiao Lin, Jian Sun</div>
+        </div>
+        <div class="preset">
+            <a href="./#/preset/ResNeXt-50">ResNeXt-50 (from https://github.com/cypw/ResNeXt-1)</a>
+            <div class="authors">Saining Xie, Ross Girshick, Piotr Dollár, Zhuowen Tu, Kaiming He</div>
+        </div>
+        <div class="preset">
+            <a href="./#/preset/ResNeXt-101">ResNeXt-101 (from https://github.com/cypw/ResNeXt-1)</a>
+            <div class="authors">Saining Xie, Ross Girshick, Piotr Dollár, Zhuowen Tu, Kaiming He</div>
+        </div>
+        <div class="preset">
+            <a href="./#/preset/ResNeXt-152">ResNeXt-152 (from https://github.com/cypw/ResNeXt-1)</a>
+            <div class="authors">Saining Xie, Ross Girshick, Piotr Dollár, Zhuowen Tu, Kaiming He</div>
         </div>
     </div>
 </body>
