Add MobileNetV2 preset

--- a/quickstart.html
+++ b/quickstart.html
@@ -112,6 +112,10 @@
             <a href="./#/preset/ResNeXt-152">ResNeXt-152 (from https://github.com/cypw/ResNeXt-1)</a>
             <div class="authors">Saining Xie, Ross Girshick, Piotr Dollár, Zhuowen Tu, Kaiming He</div>
         </div>
+        <div class="preset">
+            <a href="./#/preset/mobilenet_v2">MobileNetV2 (from https://github.com/shicai/MobileNet-Caffe)</a>
+            <div class="authors">Mark Sandler, Andrew Howard, Menglong Zhu, Andrey Zhmoginov, Liang-Chieh Chen</div>
+        </div>
     </div>
 </body>
 </html>
