--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta name="description" content="Netscope Visualization Tool for Convolutional Neural Networks">
 	<meta name="keywords" content="netscope, CNN, visualization, tool, neural network, convnet, graph, deep learning">
-	<meta name="autho" content="dgschwend">
+	<meta name="author" content="dgschwend">
     <title>Netscope CNN Analyzer</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/tooltip.css">
