update description in the quickstart page

--- a/quickstart.html
+++ b/quickstart.html
@@ -14,7 +14,7 @@
         <h1>Netscope CNN Analyzer</h1>
         <p>A web-based tool for visualizing and analyzing convolutional neural network architectures (or technically, any directed acyclic graph).
 		   Currently supports <a href="http://caffe.berkeleyvision.org/">Caffe</a>'s prototxt format.</p>
-        <p>Basis by <a href="https://github.com/ethereon">ethereon</a>. Extended for CNN Analysis by <a href="https://github.com/dgschwend">dgschwend</a> and <a href="https://github.com/tiagoshibata">tiagoshibata</a>.</p>
+        <p>Basis by <a href="https://github.com/ethereon">ethereon</a>. Extended for CNN Analysis by <a href="https://github.com/dgschwend">dgschwend</a>, <a href="https://github.com/tiagoshibata">tiagoshibata</a> and <a href="https://github.com/zhangcl">zhangcl</a>.</p>
     </div>
     <div class="container">
         <h2>Gist Support</h2>
